@@ -1,8 +1,4 @@
-DIST ddos-mitigator-2.1.0.tar.gz 6394 BLAKE2B 1e8ab8ac38338b005d7143b3272e985c6a3d760a4af25030219139618908563341ec753e71dd882f2feabd83ac9148dac148d760c89554af6deaed38f4db8733 SHA512 fa47e2260e8a6a88053ef936025450033f2ab24e73eaaea7bfdf5d4f7c399b98a4fc13f6ec2060ecb4de0c18c9c1f2f01d5ee8249ac24d53c336d102f7365612
-DIST ddos-mitigator-3.0.0.tar.gz 7988 BLAKE2B 86ad8c122154c7c426272b36447c9ccd6fa0e6c5c6c0fba4dc366a4cbe4b2903d7fff44e2aaf89c6db9eb5b43c91f89cbf969c812a143e95d4d50eb44857271f SHA512 14a22606927cdafee5d2190b2a11886c19826856f9df5bccf09a9e17b3421bc40910798210cd985ce118fb702b0e1773861c3e3a54d07b53dc7f2e3eaa404df7
 DIST ddos-mitigator-3.0.1.tar.gz 7976 BLAKE2B b582bdd34a44bf6c29047562fc4e6d62b6bd0571ebe36179752a7e11ecf70a1fb2d58561efa3e8ba4873d91f94dc7338e229ae4693c3e9bf37489d5cafae7a21 SHA512 a330cb9d0d2c27a17090d88065ec3137e56906bb814a2beed0110cd16359730de3f11f66f6fcc7f0a0a7cb9ce8cee05a29d676a033194ba03f365ce47051b1f3
-EBUILD ddos-mitigator-2.1.0.ebuild 734 BLAKE2B 5415a2a3eed83ff3d04ad95f91870a3e71ead881fab74ffabb650f8a290fae23e16b7bbd4349c21bac1a7ebe4affe64098c368e42c5b0c59ac2d9eb2374a7e6a SHA512 67af4a0eb51949e136a2d4a0b9c7665ac1896ab121939102ef9ec6133c452b0cbf52f159d4f8683f2cdc9af9e9f293fe94e99060473aee5f8b1a74b89f57d8c7
-EBUILD ddos-mitigator-3.0.0.ebuild 1168 BLAKE2B ce20d7797c9d8b791f7b497130c8efd511f32d553a635eaf165b2739f4ec82cdf5ae3cc49a32894b011c112a8412fa566fdba08f62bd8c29f4ac2ff90807e421 SHA512 414a3adae39365a6f50db4d4e081c95cbecf175da5035b8c7b7d1315007de48e5f26c842eb7f2cfc0f134c278191f47b2a659705673c394056f868ea719cffdb
-EBUILD ddos-mitigator-3.0.1.ebuild 1174 BLAKE2B b03dfbdf05e3e89a56bca9013ce4eef84afba66e75e1edfa94d17b6af55f07a47ccd006e73de8eff028aac381a05e74b04787e918bf89f4b08f5ad48b64b9b33 SHA512 56f2164e05c8537ebd6804e85eb9d03bbbb8e92f1a9a7ad5621cdcb6673718fe7e6fe3073b4bd24b8a21252e833fdbac6ac90e639436fbb7ce4d0448b744c557
-MISC ChangeLog 663 BLAKE2B b2c9c6e2864eff8800d644e922c6e8bc7780df61ac962f93fe932c3deb95f2ae3e5f7e5bf677efcbacfee0620d8bb5aab4332eb73dee31666741646c6d24123e SHA512 88fa95823c23a5db2e14badeaff2fb710523a24ac934c5c0a9177d1a724d8bef731bff815e9da85387c81d347cf107b6653423a658f9c41c6f8d10bc85fd2014
+EBUILD ddos-mitigator-3.0.1-r1.ebuild 1175 BLAKE2B 4c47004f5a3d53b0353822ff4d7dc2bc0f67b756765e2b709153972332a8f8f934f78a8a4de807828eedca7e31889d5717e560803fc5257d9ec556f0145d2291 SHA512 628c162fdb3dd9937e94ef2509f410d61bae7ded7daa8814a80904f2212825913c2ff366a9ad30c40e2fe91973eace027f062f2ef992f829181a095c41261e4f
+MISC ChangeLog 931 BLAKE2B 7e2d6a7e43fb226f2b33e0045151aa8c50b1bc9f355b69d6459ea87cae58e89c5577bedac070d6ca1a6846d9e99c0e476bb0cc50ad7f3f81196989fa5e8972b9 SHA512 8522e28e6a97c9cc57a4e6e776345d52e15b27269aa73c8161d1688bb954a1a6056c4ebaec52c2d054c39bfc41e9030ff4e4f45691d073b685273a35c33f2bbd
 MISC metadata.xml 248 BLAKE2B cb50cad2c614a99daa2e236f9e0d0fab1ab20a898c0b0f0c28a1387820ab1f2b9dd4d396a3b38f732b493824f96a29ee5894e80e09dbd08dff62c1aaba3feaa0 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2
